--- a/css/admin.css
+++ b/css/admin.css
@@ -4,14 +4,21 @@
 	margin-top: 50px;
 	padding-top: 25px;
 	margin-right: 30px;
-	border-top: 2px dotted #000;
+	border-top: 1px dotted #888;
+	color: #888 !important;
 }
 
 .beta_offline_footer a{
 	display: inline-block;
 	margin-right: 40px;
 	float: left;
+	color: #272727;
 }
+
+.beta_offline_footer a:hover{
+	color: #68A8F5;
+}
+
 
 .beta_offline_footer a img{
 	max-width: 80px;
@@ -22,4 +29,5 @@
 	margin: 0px;
 	padding: 0px;
 	padding-top: 5px;
+	color: #313131 !important;
 }
