--- a/css/style-classic_dark.css
+++ b/css/style-classic_dark.css
@@ -1,5 +1,5 @@
 body.betaplugin{
-	background-color: #f1f1f1;
+	background-color: #131619;
 	margin: 0px;
 	padding: 0px;
 	font-family: "Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
@@ -29,10 +29,10 @@ body.betaplugin{
 }
 
 #bcSOFF_container .bcSOFF_message_box{
-	background-color: rgba(255,255,255,0.85);
+	background-color: rgba(32,37,42,0.90);
 	padding: 40px;
 	width: 100%;
-	border: 1px solid #94A0AC;
+	border: 1px solid #2E353C;
 	border-radius: 2px;
 	text-align: center;
 }
@@ -47,13 +47,13 @@ body.betaplugin{
 #bcSOFF_container h4, 
 #bcSOFF_container h5, 
 #bcSOFF_container p{
-	color: #3A424A;	
+	color: #E3E6E9;	
 }
 
 p.bcSOFF_label{
 	font-size: 13px;
 	text-align: right;
-	color: #979797;
+	color: #414141;
 }
 
 #bcSOFF_container a{
