--- a/css/style-dot.css
+++ b/css/style-dot.css
@@ -1,5 +1,5 @@
 body.betaplugin{
-	background-color: #f1f1f1;
+	background-color: #F2F2F2;
 	margin: 0px;
 	padding: 0px;
 	font-family: "Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
@@ -18,30 +18,36 @@ body.betaplugin{
     object-fit: cover;
 	margin: 0px;
 	padding: 0px;
-	padding-top: 17vh;
 	box-sizing: border-box;
+	display: flex;
+	align-items: center;
 }
 
 #bcSOFF_container .bcSOFF_message_box_wrapper{
 	width: 100%;
-	max-width: 600px;
 	margin: 0 auto;
-	padding: 20px;
+	padding: 0px;
 	box-sizing: border-box;
-}
-
-bcSOFF_container .bcSOFF_message_box_contents{
     
 }
 
 #bcSOFF_container .bcSOFF_message_box{
 	background-color: rgba(255,255,255,0.85);
 	padding: 40px;
-	width: 100%;
-	border: 1px solid #94A0AC;
-	border-radius: 2px;
+    margin: 0 auto;
+    width: 600px;
+    height: 600px;
+    border-radius: 300px;
 	text-align: center;
 	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+    border: 5px solid #fff;
+}
+
+#bcSOFF_container .bcSOFF_message_box_contents{
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 #bcSOFF_container img.bcSOFF_offline_logo{
@@ -52,24 +58,29 @@ bcSOFF_container .bcSOFF_message_box_contents{
 #bcSOFF_container h2, 
 #bcSOFF_container h3, 
 #bcSOFF_container h4, 
-#bcSOFF_container h5, 
+#bcSOFF_container h5{
+    color: #092D4E;
+    font-weight: normal;
+}
 #bcSOFF_container p{
-	color: #3A424A;	
+	color: #434343;	
+    font-size: 22px;
 }
 
+
 p.bcSOFF_label{
-	font-size: 13px;
-	text-align: right;
-	color: #979797;
+	font-size: 13px !important;
+	text-align: center;
+	color: #5C5C5C !important;
 }
 
 #bcSOFF_container a{
-	color: #0073aa;
+	color: #212121;
 	text-decoration: underline;
 }
 
 #bcSOFF_container a:hover{
-	color: #0088C9;
+	color: #1B7EDB;
 	text-decoration: underline;
 }
 
